# cunctator

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  build_debs.sh.in  configure.ac  configure.in  cunctator.pro  cunctator.spec.in  get_distro.sh  rc.cuncd
conf/: Makefile.am  cunctator.conf-callcommander  cunctator.conf-sample
cunc/: Makefile.am  cuncclient.cpp  cuncclient.h
cuncd/: Makefile.am  airtools.cpp  airtools.h  asihpidelay.cpp  asihpidelay.h  bd600.cpp  bd600.h  connection.cpp  connection.h  cuncconfig.cpp  cuncconfig.h  cuncd.cpp  cuncd.h  cuncd.pro  cuncsocket.cpp  cuncsocket.h  delay.cpp  delay.h  dummy.cpp  dummy.h  globals.h  jackdelay.cpp  jackdelay.h  ringbuffer.cpp  ringbuffer.h  rmlengine.cpp  rmlengine.h  udpqueue.cpp  udpqueue.h
debian/: Makefile.am  changelog.src  control.src  copyright  cunctator-common.postinst  cunctator-common.postrm  cunctator-server.postinst  cunctator-server.postrm  cunctator-server.prerm  postinst  postrm  prerm  rules
debian/source/: Makefile.am
docs/: Makefile.am  cunc.xml  protocol.odt
helpers/: Makefile.am
icons/: Makefile.am  cunc-16x16.xpm  cunc-32x32.xpm  cunc-48x48.xpm
lib/: Makefile.am  cmdswitch.cpp  cmdswitch.h  cunc.h  profile.cpp  profile.h  profileline.cpp  profileline.h  profilesection.cpp  profilesection.h  pushbutton.cpp  pushbutton.h  ringbuffer.cpp  ringbuffer.h  terminator.cpp  terminator.h  ttydevice.cpp  ttydevice.h
systemd/: Makefile.am  cunctator.service.in
xdg/: Makefile.am  cunctator_cunc.desktop
